# py-aiger-coins

./: .drone.yml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
aiger_coins/: __init__.py  dice.py  distributions.py  infer.py  mdp.py  pcirc.py  random_var.py  test_distributions.py  test_mdp.py  utils.py
tests/: test_distributions.py  test_infer.py  test_mdp.py  test_pcirc.py
