[tool.poetry]
name = "py-aiger-coins"
version = "1.4.0"
description = "Library for creating circuits that encode discrete distributions."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
repository = "https://github.com/mvcisback/py-aiger-coins"
readme="README.md"
license = "MIT"
packages = [
    { include = "aiger_coins"},
]

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.3"
py-aiger = "^4.0.0"
py-aiger-bv = "^2.0.0"
funcy = "^1.13"
py-aiger-bdd = {version = "^0.3.0", optional=true}
py-aiger-sat = {version = "^1.1", optional = true}

[tool.poetry.dev-dependencies]
codecov = "^2.0"
hypothesis = "^4.42"
py-aiger-bdd = "^0.3.0"
py-aiger-sat = "^1.1"
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-xdist = "^1.29"
py-aiger-ptltl = "^1.0"


[tool.poetry.extras]
bdd = ["py-aiger-bdd"]
sat = ["py-aiger-sat"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
